[package]
name = "pi_slotmap_tree"
version = "0.2.0"
authors = ["suncy <530739162@qq.com>"]
edition = "2021"
description = "A tree structure implemented by dense memory linked list"
repository = "https://github.com/GaiaWorld/pi_slotmap_tree.git"
license = "MIT OR Apache-2.0"
keywords = ["pi", "tree", "slotmap_tree"]

[dependencies]
pi_null = "0.1"
log = "0.4"

